# Allotize

./: .gitignore  Cargo.toml  LICENSE  README.md  amake  infrastructure.md  overview.md  pack  quickstart.md
.github/workflows/: rust.yml
allotize-core/: Cargo.toml
allotize-core/src/: app.rs  identity.rs  js_util.rs  lib.rs  net_traits.rs
allotize-core/src/com/: com_traits.rs  mod.rs  rtcconstructs.rs  rtcpool.rs  rtctransaction.rs  timed_event.rs
allotize-core/src/item/: Cargo.toml  build.py
allotize-core/src/item/src/: component.rs  lib.rs
allotize-core/tests/: crdt_data.rs  normal_data.rs  pool.rs  timed_event.rs
allotize-db/: Cargo.toml
allotize-db/src/: engine.rs  idb.rs  lib.rs  worker.rs
allotize-db/tests/: bench.rs  idb.rs  store.rs
allotize-signal/: Cargo.toml  Procfile
allotize-signal/src/: auth.rs  main.rs
docs/: book.toml
docs/src/: SUMMARY.md  introduction.md  key.md  tutorial.md
web/allotize-essence/: package.json
web/allotize-essence/src/: data.js  index.html  index.jsx
web/allotize-essence/src/js/components/: Card.jsx  Endeavor.jsx  Logs.jsx  Meta.jsx  Sidebar.jsx
web/allotize-js/: package-lock.json  package.json  tsconfig.json
web/allotize-js/lib/: index.d.ts  index.d.ts.map  index.js  index.js.map
web/allotize-js/src/: index.ts
web/allotize-react/: index.js  package.json
web/allotize-react/hooks/: index.js
web/allotize-web/: package.json
web/allotize-web/src/: index.html  index.jsx
web/allotize-web/src/js/components/: Channel.jsx  Counter.jsx  Meta.jsx  Query.jsx  Text.jsx  Toc.jsx
web/allotize-web/src/js/hooks/: allotize.js
